Modify Datalake Azure Yaml

--- a/ingestion/src/metadata/examples/workflows/datalake_azure_client_secret.yaml
+++ b/ingestion/src/metadata/examples/workflows/datalake_azure_client_secret.yaml
@@ -7,8 +7,9 @@ source:
       configSource:      
         securityConfig: 
           clientId: clientId
-          clientSecret: clientSecret
-          tenantId: tenantId
+          azureAuthType:
+            clientSecret: clientSecret
+            tenantId: tenantId
           accountName: accountName
       bucketName: bucket name
       prefix: prefix
